# GaussianBeam

./: .gitignore  CLAUDE.md  CMakeLists.txt  GaussianBeam.pro
gui/: GaussianBeamDelegate.cpp  GaussianBeamLoad.cpp  OpticsView.cpp  OpticsWidgets.cpp  main.cpp
gui/images/: gaussianbeam.icns
po/: GaussianBeam_fr.ts
